# sbux-scarper

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
data/: sbux.geojson
docs/: data.geojson  index.html  index.js
sbux_scraper/: main.py
